Implemented JSOUP  instead of TIKA