@@ -1,89 +1,66 @@
 package cs454.seo;
 
-import java.io.BufferedInputStream;
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.FileNotFoundException;
 import java.io.FileWriter;
-import java.io.IOException;
 import java.io.InputStream;
 
-import org.apache.tika.Tika;
 import org.apache.tika.exception.TikaException;
 
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
-import java.net.URLConnection;
-import java.nio.file.Files;
-import java.nio.file.StandardCopyOption;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.sql.Statement;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
-import java.util.Date;
-import java.util.Iterator;
-import java.util.LinkedList;
-import java.util.Queue;
-import java.util.Set;
 
-import javax.net.ssl.SSLContext;
 import javax.net.ssl.SSLHandshakeException;
-import javax.net.ssl.SSLSocketFactory;
-import javax.net.ssl.TrustManager;
-import javax.net.ssl.X509TrustManager;
-import javax.security.cert.X509Certificate;
 
 import org.apache.tika.metadata.Metadata;
 import org.apache.tika.parser.AutoDetectParser;
-import org.apache.tika.parser.ParseContext;
-import org.apache.tika.parser.Parser;
-import org.apache.tika.parser.html.HtmlParser;
 import org.apache.tika.sax.BodyContentHandler;
-import org.apache.tika.sax.Link;
-import org.apache.tika.sax.LinkContentHandler;
-import org.apache.tika.sax.TeeContentHandler;
-import org.apache.tika.sax.ToHTMLContentHandler;
-import org.jsoup.nodes.Node;
+import org.jsoup.Connection;
+import org.jsoup.Jsoup;
+import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Element;
+import org.jsoup.select.Elements;
 import org.xml.sax.ContentHandler;
 import org.xml.sax.SAXException;
+
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonParser;
 
 public class WebCrawler {
 	public static DB db = new DB();
 	static ArrayList<tempData> storedLinks = new ArrayList<tempData>();
-	static String masterURL = "http://www.calstatela.edu";
-	static String saveDir = "C:/path";
-	static int masterD;
+	public static String masterURL;
+	static String saveDir = "C://path";
+	public static int masterD;
 	static FileWriter fileJSON;
 
 	public static void main(String[] args) throws Exception {
 		WebCrawler p = new WebCrawler();
 
-		//p.passArgs(args);
+		p.passArgs(args);
 
 		fileJSON = new FileWriter("metadata.json");
 		storedLinks.add(new tempData(masterURL, 0, false, true));
-	/*	try {
-			HttpDownloadUtility.downloadFile("Home",masterURL, saveDir);
-		} catch (Exception ex) {
-			// ex.printStackTrace();
-		}*/
-		p.CRAWL_Recursive(2);
+	
+		//p.CRAWL_Recursive(2);
 
-		//p.CRAWL_Recursive(masterD);
+		p.CRAWL_Recursive(masterD);
 
-		WebCrawler.fileJSON.close();
-
+		fileJSON.close();
+		
+		
+		
 		// p.BFS(masterURL);
 
 	}
 
 	public void passArgs(String[] args) {
 		for (int i = 0; i < args.length; i++) {
-			System.out.println(args[i]);
+		
 			if (args[i].equals("-d")) {
 				this.masterD = Integer.parseInt(args[i + 1]);
 				continue;
@@ -146,7 +123,7 @@ public class WebCrawler {
 		}
 		System.out.println("Parent " + urlPath + " ------- " + urlDepth);
 
-		URL url;
+/*		URL url;
 		try {
 			url = new URL(urlPath);
 			URI uri = new URI(masterURL);
@@ -184,23 +161,99 @@ public class WebCrawler {
 			AutoDetectParser parser = new AutoDetectParser();
 			parser.parse(input, teeHandler, metadata, parsecontext);
 			String title = metadata.get(Metadata.TITLE);
-			String type = metadata.get(Metadata.CONTENT_TYPE);
+			String type = metadata.get(Metadata.CONTENT_TYPE);*/
 			urlDepth = urlDepth + 1;
 			
-
+			//JSOup
+			
+			
+			Document doc;
 			try {
+		 
+				// need http protocol
+				doc = Jsoup.connect(urlPath).get();
+				URI uri = new URI(masterURL);
+				String domain = uri.getHost();
+				System.out.println(domain + "Domain Name");
+
+				// get page title
+				String title = doc.title();
+				//System.out.println("title : " + title);
+				String text = doc.body().text();
+				// get all links
+				Elements links = doc.select("a[href]");
+				
+				Connection.Response res = Jsoup.connect(urlPath).timeout(10*1000).execute();
+
+				String contentType=res.contentType();
+				
+				
+				try {
+					HttpDownloadUtility.downloadFile(1,title,contentType,urlPath, saveDir, links);
+				} catch (Exception ex) {
+					ex.printStackTrace();
+				}
+				for (Element link : links) {
+					Element image = doc.select("img").first();
+					String imageurl = image.absUrl("src");
+					System.out.println(imageurl + "IMAGE");
+					
+					String curLink = link.absUrl("href");
+					
+					int curDepth = urlDepth;
+
+					forEachCrawledLinks(curLink, domain, d, curDepth, urlSameDomain);
+					
+				}
+				
+				for (Element link : links) {
+					Element image = doc.select("img").first();
+					String imageurl = image.absUrl("src");
+					System.out.println(imageurl + "IMAGE");
+					
+					String curLink = link.absUrl("href");
+					
+					int curDepth = urlDepth;
+					try {
+						HttpDownloadUtility.downloadFile(0,imageurl,contentType,urlPath, saveDir, links);
+					} catch (Exception ex) {
+						ex.printStackTrace();
+					}
+				}
+			/*	try {
+					HttpDownloadUtility.downloadFile(title,type,urlPath, saveDir, linkhandler.getLinks());
+				} catch (Exception ex) {
+					// ex.printStackTrace();
+				}
+
+					//Storage.storelinks(linkhandler.getLinks());
+				for (Link name : linkhandler.getLinks()) {
+					int curDepth = urlDepth;
+
+					String curLink = name.getUri();
+					forEachCrawledLinks(curLink, domain, d, curDepth, urlSameDomain);
+				}
+			*/
+			
+			
+			
+			
+			
+			
+
+		/*	try {
 				HttpDownloadUtility.downloadFile(title,type,urlPath, saveDir, linkhandler.getLinks());
 			} catch (Exception ex) {
 				// ex.printStackTrace();
 			}
 
-				Storage.storelinks(linkhandler.getLinks());
+				//Storage.storelinks(linkhandler.getLinks());
 			for (Link name : linkhandler.getLinks()) {
 				int curDepth = urlDepth;
 
 				String curLink = name.getUri();
 				forEachCrawledLinks(curLink, domain, d, curDepth, urlSameDomain);
-			}
+			}*/
 		} catch (Exception e) {
 
 		}
@@ -255,11 +308,10 @@ public class WebCrawler {
 			}
 		}
 
-		System.out.println(curLink + " WAS LINK AND  " + curDepth + isPresent);
-
+	
 		if (isPresent == false) {
 
-			if ((isCurSameDomain == true)
+			if ((isCurSameDomain == true && curDepth <= 10)
 					|| (isCurSameDomain == false && curDepth <= d)) {
 
 				storedLinks.add(new tempData(curLink, curDepth, false,
@@ -276,53 +328,16 @@ public class WebCrawler {
 
 
 /*
-	@SuppressWarnings({ "unchecked", "rawtypes", "unused" })
-	public void BFS_Recursive(Queue queue) throws SAXException, TikaException,
-			SSLHandshakeException, SQLException {
-
-		if (queue.isEmpty()) {
-			return;
-		}
-		String path = (String) queue.remove();
-		String fileURL = path;
-		String saveDir = "C:/path";
-
-		for (int i = 0; i == storedLinks.size(); i++) {
-
-			System.out.println(storedLinks.get(i).getUrl());
-		}
-		System.out.println("-------------------------");
-
-		// check the stored link, if copy founded simply skip
-		if (!((storedLinks.contains(path)) || (storedLinks.contains(path
-				.substring(0, path.length() - 1))))) {
-			// storedLinks.add(new tempData(path, 1));
-
-		} else {
-			BFS_Recursive(queue);
-		}
-
-		// check if the given URL is already in database
-		String sql = "select * from Record where URL = '" + path + "'";
-		ResultSet rs = db.runSql(sql);
-		if (rs.next()) {
-
-		} else {
-			// store the URL to database to avoid parsing again
-			sql = "INSERT INTO  `Crawler`.`Record` " + "(`URL`) VALUES "
-					+ "(?);";
-			PreparedStatement stmt = db.conn.prepareStatement(sql,
-					Statement.RETURN_GENERATED_KEYS);
-			stmt.setString(1, path);
-			stmt.execute();
-		}
-
 		URL url;
 		try {
-			url = new URL(path);
+			url = new URL(urlPath);
+			URI uri = new URI(masterURL);
+			String domain = uri.getHost();
+			System.out.println(domain + "Domain Name");
 
 			// InputStream input = url.openStream();
-			// In adverse sittuation, uncomment upper line and delete below till
+			// In adverse sittuation, uncomment upper line and delete below
+			// till
 			// checkpt1 - implemented to remove IOEXception - nirav
 			URLConnection uc;
 			StringBuilder parsedContentFromUrl = new StringBuilder();
@@ -350,78 +365,8 @@ public class WebCrawler {
 			ParseContext parsecontext = new ParseContext();
 			AutoDetectParser parser = new AutoDetectParser();
 			parser.parse(input, teeHandler, metadata, parsecontext);
-
-			for (Link name : linkhandler.getLinks()) {
-				String curLink = name.getUri();
-				if (!(curLink.startsWith("http://")
-						|| curLink.startsWith("https://") || curLink
-							.startsWith("ftp://"))) {
-					String urlLink = url.toString();
-					String absPath = null;
-					if (urlLink.endsWith("/")) {
-						absPath = urlLink.substring(0, urlLink.length() - 1);
-					} else {
-						absPath = urlLink + curLink;
-					}
-
-					curLink = absPath;
-
-				}
-				if (curLink.endsWith("/")) {
-					curLink = curLink.substring(0, curLink.length() - 1);
-
-				}
-				if ((path.contains(masterURL)) || (masterURL.contains(path))) {
-
-					try {
-						HttpDownloadUtility.downloadFile(curLink, saveDir);
-					} catch (Exception ex) {
-						// ex.printStackTrace();
-					}
-
-					queue.add(curLink);
-				} else {
-
-					if (!((storedLinks.contains(curLink)) || (storedLinks
-							.contains(curLink.substring(0, curLink.length() - 1))))) {
-
-						try {
-							HttpDownloadUtility.downloadFile(curLink, saveDir);
-						} catch (Exception ex) {
-							// ex.printStackTrace();
-						}
-						// storedLinks.add(new tempData(curLink, 1));
-						// storedLinks.add(curLink);
-
-					}
-
-					// check if the given URL is already in database
-					String newSql = "select * from Record where URL = '"
-							+ curLink + "'";
-					ResultSet rs1 = db.runSql(newSql);
-					if (rs1.next()) {
-
-					} else {
-						// store the URL to database to avoid parsing again
-						newSql = "INSERT INTO  `Crawler`.`Record` "
-								+ "(`URL`) VALUES " + "(?);";
-						PreparedStatement stmt1 = db.conn.prepareStatement(
-								newSql, Statement.RETURN_GENERATED_KEYS);
-						stmt1.setString(1, path);
-						stmt1.execute();
-					}
-
-					// storedLinks.add(curLink);
-				}
-
-			}
-
-		} catch (Exception e) {
-
-			// e.printStackTrace();
-		}
-		BFS_Recursive(queue);
-	}
+			String title = metadata.get(Metadata.TITLE);
+			String type = metadata.get(Metadata.CONTENT_TYPE);
 */
 	public static void findMetadata(String path) throws Exception {
 
@@ -453,4 +398,5 @@ public class WebCrawler {
 		System.out.println("After Format : " + sdf.format(file.lastModified()));
 		return sdf.format(file.lastModified());
 	}
+	
 }
